--- a/src/components/Index/Index.less
+++ b/src/components/Index/Index.less
@@ -5,7 +5,12 @@
     margin-top: 10px
   }
   .header{
-    background-color:#fff
+    width:100%;
+    position:absolute;
+    top: 0;
+    background-color:#fff;
+    border-bottom: 5px solid #ddd;
+    z-index: 9999
   }
 
 }
