add editconfig :blush:

--- a/src/components/ArticleList/ArticleList.less
+++ b/src/components/ArticleList/ArticleList.less
@@ -3,10 +3,11 @@
 .articleListContainer{
   margin-top: 5px;
   background-color: #fff;
-
   .articleListUl{
-     height: 1500px;
+     height: 1100px;
+     overflow: scroll;
      margin-top: 180px;
+     -webkit-overflow-scrolling: touch;
   }
   .articleListLi{
     padding: 30px 20px;
