--- a/src/components/Index/Index.less
+++ b/src/components/Index/Index.less
@@ -2,16 +2,21 @@
   .logo{
     width: 80px;
     height: 55px;
-    margin-top: 10px
   }
   .header{
     width:100%;
-    position:absolute;
-    top: 0;
-    background-color:#fff;
-    border-bottom: 5px solid #ddd;
+    background-color:#f1e7e7;
     z-index: 9999
   }
+  h1{
+    text-align: center;
+    font-size: 40px
+  }
 
+  .space-carousel {
+    padding: 16px;
+    background: #DEF1E5;
+    overflow: hidden;
+  }
 }
 
