--- a/src/components/ArticleDetail/ArticleDetail.less
+++ b/src/components/ArticleDetail/ArticleDetail.less
@@ -1,7 +1,7 @@
 .articleDetailContainer{
 	background-color: #fff;
 	margin-top: 10px;
-	padding: 20px 10px;
+	padding: 20px;
 
 	.articleDetailInfo{
 		margin:20px 0;
