add index book style

--- a/src/components/ArticleList/ArticleList.less
+++ b/src/components/ArticleList/ArticleList.less
@@ -3,10 +3,10 @@
 .articleListContainer{
   background-color: #fff;
   .articleListUl{
-     height: 1100px;
-     overflow: scroll;
-     margin-top: 180px;
-     -webkit-overflow-scrolling: touch;
+		overflow: scroll;
+		height: 100%;
+		margin-top: 80px;
+    -webkit-overflow-scrolling: touch;
   }
   .articleListLi{
     padding: 30px 20px;
