--- a/src/components/Category/CategorySingle/index.less
+++ b/src/components/Category/CategorySingle/index.less
@@ -2,6 +2,13 @@
 	h2{
 		font-size: 36px;
 	}
+	&-title{
+		width: 100%;
+		height: 40px;
+		margin-top: 30px;
+		line-height: 40px;
+		border-bottom: 1px solid #ddd;
+	}
 	&-link{
 		vertical-align: middle;
 		float: right
