--- a/src/components/Category/SingleCard/index.less
+++ b/src/components/Category/SingleCard/index.less
@@ -1,11 +1,8 @@
 .singleCard{
-  width: 210px;
+	margin: 0 auto;
+  width: 95%;
   border: 1px solid #D5E0DD;
   height: 250px;
-  position: relative;
-  float: left;
-  margin: 5px;
-  margin-top: 15px;
   background: #fff;
 	box-shadow: 0px 0px 7px #CAE7DF;
 
