--- a/src/components/ArticleList/ArticleList.less
+++ b/src/components/ArticleList/ArticleList.less
@@ -4,7 +4,7 @@
   background-color: #fff;
   .articleListUl{
 		overflow: scroll;
-		height: 100%;
+		height: 88vh;
 		margin-top: 80px;
     -webkit-overflow-scrolling: touch;
   }
