--- a/src/components/Category/CategorySingle/index.less
+++ b/src/components/Category/CategorySingle/index.less
@@ -1,8 +1,11 @@
 .categorySingle{
+	width: 100%;
+	display: inline-block;
 	h2{
 		font-size: 36px;
 	}
 	&-title{
+		position: relative;
 		width: 100%;
 		height: 40px;
 		margin-top: 30px;
@@ -10,7 +13,7 @@
 		border-bottom: 1px solid #ddd;
 	}
 	&-link{
-		vertical-align: middle;
-		float: right
+		position: absolute;
+		right: -12px;
 	}
 }
