fix background-color issue

--- a/src/App.less
+++ b/src/App.less
@@ -84,3 +84,6 @@ a:hover {
 .am-grid-item{
 	height: 285px;
 }
+.am-grid .am-flexbox .am-flexbox-item.am-grid-item-active .am-grid-item-content{
+	background-color: #fff !important
+}
