--- a/src/functions/Index/index.less
+++ b/src/functions/Index/index.less
@@ -1,4 +1,6 @@
 .indexContainer{
+	-webkit-overflow-scrolling:touch;
+
   .logo{
     width: 80px;
     height: 55px;
@@ -17,6 +19,22 @@
     padding: 16px;
     background: #DEF1E5;
     overflow: hidden;
-  }
+	}
+
+	// 抽屉 菜单
+	.my-drawer {
+		position: relative;
+		overflow: auto;
+		-webkit-overflow-scrolling: touch;
+	}
+	.my-drawer .am-drawer-sidebar {
+		background-color: #fff;
+		overflow: auto;
+		-webkit-overflow-scrolling: touch;
+	}
+	.my-drawer .am-drawer-sidebar .am-list {
+		width: 300px;
+		padding: 0;
+	}
 }
 
