--- a/src/functions/Nbcollect/index.less
+++ b/src/functions/Nbcollect/index.less
@@ -1,6 +1,8 @@
 .nbcollect{
 	color: #666;
 	font-size: 20px;
+
+	-webkit-overflow-scrolling:touch;
 	//关键代码 去移动端点击阴影
 	-webkit-tap-highlight-color:rgba(255,255,255,0);
 	&-container{
@@ -10,7 +12,14 @@
 	&-topPanel{
 		background-color: #fff;
 		margin:10px 0;
-		padding: 20px
+		padding: 20px;
+
+		h2{
+			font-size: 32px;
+		}
+		span{
+			font-size: 12px;
+		}
 	}
 	&-aItem{
 		display: inline-block;
